tests/baselines/reference/assignmentCompat1.errors.txt
==== tests/cases/compiler/assignmentCompat1.ts (2 errors) ====
    var x = {one: 1};
    var y: {[index:string]: any};
    
    x = y;
    ~
!!! error TS2322: Type '{ [x: string]: any; }' is not assignable to type '{ one: number; }':
!!! error TS2322:   Property 'one' is missing in type '{ [x: string]: any; }'.
    y = x;
    ~
!!! error TS2322: Type '{ one: number; }' is not assignable to type '{ [x: string]: any; }':
!!! error TS2322:   Index signature is missing in type '{ one: number; }'.